# blatt-7-aufgabe-1-dasisteinteam

./: CMakeLists.txt  readme.md
avlBaum/: AvlBaum.cpp  AvlBaum.h  AvlTree.cpp  AvlTree.h
test/: CMakeLists.txt  testAvl.cpp  testAvl.h
